add_executable(test_dataset_cgns cgns.cpp)
target_include_directories(test_dataset_cgns PRIVATE ${CGNS_INC})
target_link_libraries(test_dataset_cgns ${CGNS_LIB})
set_target_properties(test_dataset_cgns PROPERTIES OUTPUT_NAME cgns)
add_test(NAME TestDatasetCgns COMMAND cgns)

add_executable(test_dataset_metis metis.cpp)
target_include_directories(test_dataset_metis PRIVATE ${METIS_INC})
target_link_libraries(test_dataset_metis metis)
set_target_properties(test_dataset_metis PROPERTIES OUTPUT_NAME metis)
add_test(NAME TestDatasetMetis COMMAND metis)

add_executable(test_dataset_mapper mapper.cpp)
target_include_directories(test_dataset_mapper PRIVATE ${CGNS_INC} ${METIS_INC})
target_link_libraries(test_dataset_mapper ${CGNS_LIB} metis)
set_target_properties(test_dataset_mapper PROPERTIES OUTPUT_NAME mapper)
add_test(NAME TestDatasetMapper COMMAND mapper)

add_executable(test_dataset_shuffler shuffler.cpp)
target_include_directories(test_dataset_shuffler PRIVATE ${CGNS_INC} ${METIS_INC})
target_link_libraries(test_dataset_shuffler ${CGNS_LIB} metis)
set_target_properties(test_dataset_shuffler PROPERTIES OUTPUT_NAME shuffler)
add_test(NAME TestDatasetShuffler COMMAND shuffler)

add_executable(test_dataset_part part.cpp)
target_include_directories(test_dataset_part PRIVATE ${CGNS_INC} ${EIGEN_INC} ${MPI_CXX_HEADER_DIR})
target_link_libraries(test_dataset_part ${CGNS_LIB} ${MPI_mpi_LIBRARY})
set_target_properties(test_dataset_part PROPERTIES OUTPUT_NAME part)
