add_executable(test_mesh_cgns cgns.cpp)
target_include_directories(test_mesh_cgns PRIVATE ${CGNS_INC})
target_link_libraries(test_mesh_cgns ${CGNS_LIB})
set_target_properties(test_mesh_cgns PROPERTIES OUTPUT_NAME cgns)
add_test(NAME test_mesh_cgns COMMAND cgns)

add_executable(test_mesh_metis metis.cpp)
target_include_directories(test_mesh_metis PRIVATE ${METIS_INC})
target_link_libraries(test_mesh_metis metis)
set_target_properties(test_mesh_metis PROPERTIES OUTPUT_NAME metis)
add_test(NAME test_mesh_metis COMMAND metis)

add_executable(test_mesh_mapper mapper.cpp)
target_include_directories(test_mesh_mapper PRIVATE ${CGNS_INC} ${METIS_INC})
target_link_libraries(test_mesh_mapper ${CGNS_LIB} metis)
set_target_properties(test_mesh_mapper PROPERTIES OUTPUT_NAME mapper)
add_test(NAME test_mesh_mapper COMMAND mapper)

add_executable(test_mesh_shuffler shuffler.cpp)
target_include_directories(test_mesh_shuffler PRIVATE ${CGNS_INC} ${METIS_INC})
target_link_libraries(test_mesh_shuffler ${CGNS_LIB} metis)
set_target_properties(test_mesh_shuffler PROPERTIES OUTPUT_NAME shuffler)
add_test(NAME test_mesh_shuffler COMMAND shuffler)

add_executable(test_mesh_part part.cpp)
target_include_directories(test_mesh_part PRIVATE ${CGNS_INC} ${EIGEN_INC} ${MPI_INCLUDE_PATH})
target_link_libraries(test_mesh_part ${CGNS_LIB} ${MPI_LIBRARIES})
set_target_properties(test_mesh_part PROPERTIES OUTPUT_NAME part)

add_executable(test_mesh_cgal cgal.cpp)
target_include_directories(test_mesh_cgal PRIVATE ${CGAL_INCLUDE})
set_target_properties(test_mesh_cgal PROPERTIES OUTPUT_NAME cgal)
add_test(NAME test_mesh_cgal COMMAND cgal)
